--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=buckpal
+spring.datasource.username=SA
+spring.datasource.password=sqlserver2019!
+
+spring.liquibase.change-log=classpath:/db/changelog/01-01-changelog.xml
